--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,36 +1,68 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background:#4499;
   font-family: Arial;
+  background-size: auto 100vh;
+  height: 100vh;
+}
+
+@media (min-width: 400px) {
+  body {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 600px) {
+  body {
+    font-size: 22px;
+  }
+}
+
+header {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .menu {
-  background-color:white; 
+  background-color: white;
+  position: fixed;
+  top: 0;
+  width: 100vw;
 }
 
 .menu ul {
-  display:flex;
-  justify-content: space-between;
+  display: flex;
+  justify-content: space-around;
 }
 
 .menu li {
   list-style: none;
 }
 
-a {
-  color: teal;
+.menu a {
+  color: #4499;
+  display: block;
+  padding: 10px;
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
-.site-subtitle,
 .site-title {
-  text-align: center;
   color: whitesmoke;
+  text-align: center;
 }
 
 .site-subtitle {
+  color: silver;
   font-style: italic;
+  font-weight: lighter;
+  text-align: center;
+  font-size: 2em;
 }
