Adicionando o portfólio e os contatos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+/* soft reset do css */
 * {
   margin: 0;
   padding: 0;
@@ -9,22 +10,32 @@ body {
   font-family: Arial;
   background-size: auto 100vh;
   height: 100vh;
+  font-family: 'Roboto', sans-serif;
 }
 
+/* se a tela tiver pelo menos 400px vai carregar estes estilos */
 @media (min-width: 400px) {
   body {
     font-size: 18px;
   }
 }
 
+/* breakpoint */
 @media (min-width: 600px) {
   body {
     font-size: 22px;
   }
 }
 
+/* breakpoint */
+@media (min-width: 1200px) {
+  body {
+    font-size: 20px;
+  }
+}
+
 header {
-  height: 50vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,6 +47,8 @@ header {
   position: fixed;
   top: 0;
   width: 100vw;
+  top: 0;
+  z-index: 1;
 }
 
 .menu ul {
@@ -51,11 +64,30 @@ header {
   color: #4499;
   display: block;
   padding: 10px;
+  transition: background-color 1s, color 1s;
+}
+
+.menu a:active,
+.menu a:hover {
+  background-color: #4499;
+  color: white;
+}
+
+a {
+  color: teal;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 .site-title {
   color: whitesmoke;
+  font-family: 'Dancing Script', cursive;
+  font-size: 4em;
+  line-height: 1em;
+  margin-bottom: 20px;
   text-align: center;
 }
 
@@ -66,3 +98,96 @@ header {
   text-align: center;
   font-size: 2em;
 }
+
+.contato,
+.portfolio {
+  padding: 2em;
+  min-heigth: 100vh;
+}
+
+.contato h2,
+.portfolio h2 {
+  color: white;
+  font-family: 'Carter One', cursive;
+  font-size: 2.2em;
+  margin-bottom: .5em;
+}
+
+.portfolio .grid {
+  display: grid;
+  gap: 2em;
+}
+
+@media (min-width: 560px) {
+  .portfolio .grid {
+    grid-template-columns: 240px 240px;
+  }
+}
+
+@media (min-width: 880px) {
+  .portfolio .grid {
+    grid-template-columns: repeat(3, 260px);
+    align-content: center;
+    justify-content: center;
+    height: calc(100vh - 8em - 48px);
+  }
+}
+
+.portfolio figure {
+  text-align: center;
+}
+
+.img-portfolio {
+  height: 180px;
+  width: 240px;
+  border-radius: 10px;
+  object-fit: cover;
+  object-position: left bottom;
+  transition: transform 500ms;
+}
+
+.img-perfil {
+  position: center;
+  margin: auto;
+  border-radius: 100px;
+  object-fit: cover;
+  display: flex;
+  justify-content: space-around
+  max-width:200px;
+  max-height:200px;
+  width: auto;
+  height: auto;
+  object-fit: cover;
+  object-position: left bottom;
+  transition: transform 500ms;
+}
+
+.img-perfil:hover,
+.img-portfolio:hover {
+  transform: scale(1.2) rotate(-2deg);
+}
+
+.contato .icons {
+  text-align: center;
+}
+
+.contato a {
+  color: whitesmoke;
+  font-size: 4em;
+  transition: text-shadow 1s;
+}
+
+.contato a:active,
+.contato a:hover  {
+  text-decoration: none;
+  text-shadow: 0px 0px 10px rgba(255,255,255,.5);
+}
+
+
+
+
+
+
+
+          
+          
